@@ -27,6 +27,8 @@ Version 1.5.0current:
       converter from html to wiki right now.
     * Fix the modern CSS issues for editbar, when it shifted content far right.
       Also removed the absolute height value that never was right.
+    * Fix mod_python adaptor bugs failing to handle Location correctly.
+      See: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=339543
 
   Other changes:
     * Added irc:// to the builtin supported link schemas. You can remove it
